# phyunit

./: pyproject.toml
src/phyunit/: __init__.py  compound.py  dimension.py  dimension.pyi  multiunit.py  quantity.py  quantity.pyi  singleunit.py
src/phyunit/SI/: units.py
src/phyunit/_data/: prefixes.py  units.py
src/phyunit/utils/: iter_tools.py  special_char.py
