[project]
name = "phyunit"
version = "0.1.1"
authors = [
  { name="Dait", email="daitthu@qq.com" },
]
description = "A package for physical units."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/DaitTHU/phyunit"
Issues = "https://github.com/DaitTHU/phyunit/issues"
